# sharingan

./: DEPRECATED.md  README.md  install.sh  pyproject.toml
archive/: pyproject.toml
archive/src/sharingan/: __init__.py  cli.py  config.py
archive/src/sharingan/auth/: __init__.py  fixtures.py  prod_guard.py  test_users.py
archive/src/sharingan/data/: __init__.py  fields.py  generators.py
archive/src/sharingan/diagnose/: __init__.py  analyzer.py  fix_classifier.py  source_reader.py
archive/src/sharingan/discover/: __init__.py  base.py  detector.py  django.py  express.py  fastapi.py  nextjs.py  react.py
archive/src/sharingan/fix/: __init__.py  fixer.py  safety.py  validator.py
archive/src/sharingan/generate/: __init__.py  test_planner.py  test_writer.py
archive/src/sharingan/intervention/: __init__.py  detector.py  prompter.py
archive/src/sharingan/perf/: __init__.py  metrics.py  thresholds.py
archive/src/sharingan/report/: __init__.py  generator.py
archive/src/sharingan/run/: __init__.py  parser.py  runner.py  screenshots.py
archive/src/sharingan/schema/: __init__.py  openapi.py  (+2 more)
archive/tests/: test_auth.py  test_data_generators.py  test_discover_detector.py  test_discover_fastapi.py  test_discover_nextjs.py  test_generate_planner.py  test_intervention.py  test_perf_thresholds.py  test_report_generator.py  test_run_parser.py  test_schema_validation.py  test_visual_baseline.py
commands/: sharingan-fix.md  sharingan-report.md  sharingan-resume.md  sharingan-scan.md  sharingan.md
scripts/: auth-capture.js  organize-screenshots.js  paste-cookies.js
(+14 files in other folders)
