[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharingan-autotest"
version = "0.1.0"
description = "Autonomous testing agent for Claude Code — discovers, tests, diagnoses, and fixes your web app"
authors = [{name = "Shruthi Krithika", email = "cto@applymatic.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["testing", "playwright", "claude-code", "autonomous", "e2e", "ai-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.40",
    "jinja2>=3.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
sharingan = "sharingan.cli:main"

[project.urls]
Homepage = "https://github.com/ctoapplymatic/sharingan"
Repository = "https://github.com/ctoapplymatic/sharingan"
Issues = "https://github.com/ctoapplymatic/sharingan/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sharingan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
